fix urlbar icon spacing, mainly for those who don't use the recommended scripts like hideTrackingProtectionIconOnCustomNewTabPage.uc.js. remove firefox rules overriding font size on viewsource pages. (JS) appMenuMods: add a slight delay to the restart button, to ensure it clears startup cache successfully on right/ctrl/shift+click

--- a/resources/in-content/root.css
+++ b/resources/in-content/root.css
@@ -47,14 +47,12 @@
 
     :root {
         font-family: Overpass Mono, -moz-fixed;
-        font-size: 12;
     }
 
     xmp,
     pre,
     plaintext {
         font-family: Overpass Mono, -moz-fixed;
-        font-size: 12;
     }
 
     img.transparent {
